Add time_info with composed WeekInfo and DayInfo

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,11 @@
 
 [metadata]
 name = whattime
-description = Add a short description here!
+description = Checking what kind of time a date is.
 author = Paul Götze
 author-email = paul.christoph.goetze@gmail.com
 license = mit
-url = https://pyscaffold.org/
+url = https://github.com/grammofy/whattime
 long-description = file: README.rst
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
@@ -46,6 +46,7 @@ exclude =
 testing =
     pytest
     pytest-cov
+    pytest-randomly
 
 [options.entry_points]
 # Add here console scripts like:
