Improve setup props

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,10 +4,13 @@
 
 [metadata]
 name = whattime
+version = 0.1.0
 description = Checking what kind of time a date is.
 author = Paul Götze
 author-email = paul.christoph.goetze@gmail.com
-license = mit
+maintainer = Paul Götze
+maintainer-email = paul.christoph.goetze@gmail.com
+license = MIT
 url = https://github.com/grammofy/whattime
 long-description = file: README.rst
 # Change if running only on Windows, Mac or Linux (comma-separated)
@@ -16,7 +19,14 @@ platforms = any
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers =
     Development Status :: 4 - Beta
+    Topic :: Utilities
     Programming Language :: Python
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Operating System :: POSIX :: Linux
+    Operating System :: Unix
+    Operating System :: MacOS
+    Operating System :: Microsoft :: Windows
 
 [options]
 zip_safe = False
