Move from .rst to .md for README format

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,8 @@ maintainer = Paul Götze
 maintainer-email = paul.christoph.goetze@gmail.com
 license = MIT
 url = https://github.com/grammofy/whattime
-long-description = file: README.rst
+long-description = file: README.md
+long-description-content-type="text/markdown"
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
