Add lazy to setup.cfg extra_requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,8 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install whattime[PDF]` like:
 # PDF = ReportLab; RXP
+all = lazy
+
 # Add here test requirements (semicolon/line-separated)
 testing =
     pytest
